crates/llvmkit-ir/tests/compile_fail/terminated_block_cannot_start_cursor.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/terminated_block_cannot_start_cursor.rs:18:45
   |
18 |         let _cursor = BlockCursor::at_start(terminated);
   |                       --------------------- ^^^^^^^^^^ expected `BasicBlock<'_, _, Unterminated, _>`, found `BasicBlock<'_, (), Terminated>`
   |                       |
   |                       arguments to this function are incorrect
   |
   = note: expected struct `llvmkit_ir::BasicBlock<'_, _, Unterminated, _, BlockParamsDyn>`
              found struct `llvmkit_ir::BasicBlock<'_, (), Terminated, Brand<'_>, BlockParamsDyn>`
note: associated function defined here
  --> src/iter.rs
   |
   |     pub fn at_start(block: BasicBlock<'ctx, R, Unterminated, B>) -> Self {
   |            ^^^^^^^^
